data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2076.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7f\02\91\80\80\80\00\01\03\65\6e"
    "\76\09\74\72\61\70\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\01\0a\94\80\80\80\00\01\8e\80\80\80"
    "\00\00\41\00\04\7f\10\00\41\00\05\41\01\0b\0b"
  )
""
)